[build-system]

# Once this is present, a PEP 517 frontend like pip can build and install the project from source
# without the need for Poetry or any of its dependencies.
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

# ----------------------------------------------------------------------------------------------------------------------

[tool.poetry]

# The authors of the package.
authors = ["Alexander Borisov"]

# A short description of the package.
description = "This project is for test purposes only."

# A list of keywords that the package is related to.
keywords = ["test"]

# The name of the package.
name = "test"

# The version of the package.
version = "0.1.0"

# ----------------------------------------------------------------------------------------------------------------------

[tool.poetry.dependencies]

python = "^3.11"
aiohttp = "^3.9.0"
